Commit N3. First start. All works.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AboutAsteroidsTMS</string>
+    <string name="picture_of_day">Picture of day</string>
 </resources>
