--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AboutAsteroidsTMS</string>
     <string name="picture_of_day">Picture of day</string>
+    <string name="text_connection_error">Connection error</string>
+    <string name="button_try_again">Try again</string>
 </resources>
