--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_back">Назад</string>
     <string name="button_home">Главная</string>
+    <string name="button_фsteroids_by_date">Перейти к астероидам по дате</string>
+    <string name="button_what_asteroid">Что такое астероиды</string>
+    <string name="button_discovery">Как открыть астероид</string>
 </resources>
